2011-11-30  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/s390/fpu/libm-test-ulps: Relax cpow (2 + 3 i, 4 + 0 i)
	expectations for float.

2011-11-29  Andreas Schwab  <schwab@redhat.com>

	* locale/weight.h (findidx): Add parameter len.
	* locale/weightwc.h (findidx): Likewise.
	* posix/fnmatch_loop.c (FCT): Adjust caller.
	* posix/regcomp.c (build_equiv_class): Likewise.
	* posix/regex_internal.h (re_string_elem_size_at): Likewise.
	* posix/regexec.c (check_node_accept_bytes): Likewise.
	* string/strcoll_l.c (STRCOLL): Likewise.
	* string/strxfrm_l.c (STRXFRM): Likewise.

2011-11-28  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Handle
	EAGAIN from FUTEX_WAIT_REQUEUE_PI.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Likewise.

2011-11-17  Ulrich Drepper  <drepper@gmail.com>

	* Makefile.in: Remove CVSOPT handling.
	* configure.in: Remove use of AC_REVISION.
	* iconvdata/Makefile (distribute): No need to filter out CVS.
	* scripts/list-sources.sh: Remove CVS, subversion and monotone
	handling.

2011-11-16  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S
	[USE_AS_STRCASECMP_L]: Fix argument offsets for non-PIC.
	[USE_AS_STRNCASECMP_L]: Likewise.
	(__strcasecmp_ssse3, __strncasecmp_ssse3): Handle
	NO_TLS_DIRECT_SEG_REFS.
	* sysdeps/i386/i686/multiarch/strcmp-sse4.S [USE_AS_STRCASECMP_L]:
	Fix argument offsets for non-PIC.
	[USE_AS_STRNCASECMP_L]: Likewise.
	(__strcasecmp_sse4_2, __strncasecmp_sse4_2): Handle
	NO_TLS_DIRECT_SEG_REFS.

2011-11-15  Ulrich Drepper  <drepper@gmail.com>

	* locale/loadarchive.c (_nl_load_locale_from_archive): Open files with
	O_CLOEXEC.
	* locale/loadlocale.c (_nl_load_locale): Likewise.

2011-11-15  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/clock_gettime.c (SYSDEP_GETTIME_CPU)
	[__ASSUME_POSIX_CPU_TIMERS > 0]: Assign to retval and break.
	* sysdeps/unix/sysv/linux/x86_64/clock_gettime.c